<resources>
    <string name="app_name">Softinsa</string>
    <string name="ainda_nao_tem_uma_conta">Ainda não tem uma conta? <u>Crie uma</u></string>

    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="lembrar_password">Lembrar password</string>
    <string name="esqueceu_se_da_password">Esqueceu-se da password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ja_tem_conta_login">Já tem conta? <u>Login</u></string>
    <string name="pesquise_por_beneficios">Pesquise por Beneficios</string>
    <string name="alterar">Alterar</string>
    <string name="nova_password">Nova Password</string>
    <string name="confirmar_nova_password">Confirmar nova password</string>
    <string name="submeter">Submeter</string>
    <string name="descreva_a_sua_ideia">Descreva a sua ideia</string>
    <string name="geral">Geral</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="investimento">Investimento</string>
    <string name="negocio">Negócio</string>
    <string name="enviar">Enviar</string>
    <string name="mensagem">Mensagem</string>
    <string name="contacto_localizacao">
        <a
			href="https://www.google.com/maps/place/Central+Office+Building/@38.7721232,-9.1005266,17z/data=!4m7!3m6!1s0xd19318123ee8efd:0x858d011a8a9909c0!8m2!3d38.7721115!4d-9.097729!15sClpFZGlmaWNpbyBPZmZpY2UgT3JpZW50ZSBSdWEgZG8gTWFyIGRhIENoaW5hICBuwrozIC0gQjYgUGFycXVlIGRhcyBOYcOnw7VlcyAxOTkwLTEzOCBMaXNib2GSARJhcGFydG1lbnRfYnVpbGRpbmfgAQA!16s%2Fg%2F11bwqmvsx3?coh=164777&amp;entry=tt&amp;shorturl=1"
		>Edificio Office Oriente nº3 - B6 1990-138 Lisboa</a>
    </string>
    <string name="contacto_telemovel">
        <a href="tel:+351 213 219 600">+351 213 219 600</a>
    </string>
    <string name="contacto_emails">
        <a href="mailto:comercial@pt.softinsa.com">comercial@pt.softinsa.com</a>\n
        <a href="mailto:marketing@pt.softinsa.com">marketing@pt.softinsa.com</a>\n
        <a href="mailto:geral@pt.softinsa.com">geral@pt.softinsa.com</a>
    </string>
    <string name="data_reuniao">Data da Reunião</string>
    <string name="selecione_utilizadores">Selecione os Utilizadores</string>
    <string name="titulo_reuniao">Título da Reunião</string>
    <string name="descricao_reuniao">Descrição da Reunião</string>
    <string name="criar">Criar</string>
    <string name="terminar_sessão">Terminar Sessão</string>
    <string name="mudar_password">Mudar Password</string>
    <string name="enviar_cv">Enviar CV</string>
    <string name="desativar_conta">Desativar Conta</string>
    <string name="nomeUser">Rodrigo Almeida</string>
    <string name="emailUser">rodrigo@gmail.me</string>
    <string name="signup">Ou crie conta com uma das abaixo</string>
    <string name="pesquise_por_vagas">Pesquise por Vagas</string>
    <string name="inicio">Início</string>
    <string name="notificacoes">Notificações</string>
    <string name="mais">Mais</string>
    <string name="password_atual">Password atual</string>
    <string name="pesquisar_utilizador">Pesquisar Utilizador</string>
    <string name="pesquise_por_negocios">Pesquise por Oportunidades</string>
    <string name="pequise_por_candidaturas">pequise por candidaturas</string>
    <string name="pesquise_por_mensagens">Pesquise por Mensagens</string>
    <string name="pesquise_por_reuni_es">pesquise por reuniões</string>
    <string name="Benefícios">Benefícios</string>
    <string name="Vagas">Vagas</string>
    <string name="negocios">Negócios</string>
    <string name="Ideias">Ideias</string>
    <string name="contacto">Contactos</string>
    <string name="Reunioes">Calendário</string>
    <string name="nome_utilizador">nome_utilizador</string>
    <string name="pesquise_por_candidaturas">Pesquise por Candidaturas</string>
    <string name="pesquise_por_ideias">Pesquise por Ideias</string>
    <string name="pesquise_por_reunioes">Pesquise por Reuniões</string>
    <string name="selecionar_utilizadores">Selecionar Utilizadores</string>
    <string name="painel_admin">Painel de Admin</string>
    <string name="Oportunidades">Oportunidades</string>
    <string name="Calendário">Calendário</string>
    <string name="pesquise_por_oportunidades">pesquise por oportunidades</string>

    <string name="facebook_app_id">1269497040310756</string>
    <string name="fb_login_protocol_scheme">fb1269497040310756</string>
    <string name="facebook_client_token">12eb78355ec74f7a84e3dd996a96c1f1</string>
</resources>
