<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.SignUpActivity"
    android:background="@drawable/login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="123dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="116dp"
        android:text="@string/sign_up"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/nome"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/apelido"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/confirmar_password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/Widget.Material3.Button"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="119dp"
        android:backgroundTint="@color/white"
        android:onClick="criarConta"
        android:text="@string/criar_conta"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <Button
        android:id="@+id/loginGoogle"
        style="@style/Widget.Material3.Button"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/white"
        android:onClick="criarGoogle"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/loginFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
         />

    <Button
        android:id="@+id/loginFacebook"
        style="@style/Widget.Material3.Button"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/white"
        android:onClick="criarFacebook"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="63dp"
        android:onClick="jaTemConta"
        android:text="@string/ja_tem_conta_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFacebook" />

</androidx.constraintlayout.widget.ConstraintLayout>
