<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context=".pages.ContactoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="39dp"
        android:hint="@string/nome"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="39dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="333dp"
        android:layout_height="175dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="39dp"
        android:hint="@string/mensagem"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mensagem"
            android:layout_width="match_parent"
            android:layout_height="175dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/enviar"
        style="@style/Widget.Material3.Button"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="39dp"
        android:backgroundTint="@color/white"
        android:onClick="enviar"
        android:text="@string/enviar"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="39dp"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:text="@string/contacto_localizacao"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numerotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="39dp"
        android:drawableStart="@drawable/baseline_local_phone_24"
        android:text="@string/contacto_telemovel"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="39dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:text="@string/contacto_emails"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
