<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/login"
	tools:context=".pages.MudarPasswordActivity"
>

    <com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout2"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="25dp"
		android:layout_marginTop="30dp"
		android:layout_marginEnd="25dp"
		android:hint="@string/password_atual"
		app:boxBackgroundColor="@color/white"
		app:boxStrokeColor="@color/black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
	>

        <com.google.android.material.textfield.TextInputEditText
			android:id="@+id/PasswordAtual"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout3"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="25dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="25dp"
		android:hint="@string/nova_password"
		app:boxBackgroundColor="@color/white"
		app:boxStrokeColor="@color/black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
	>

        <com.google.android.material.textfield.TextInputEditText
			android:id="@+id/NovaPassword2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout4"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="25dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="25dp"
		android:hint="@string/confirmar_nova_password"
		app:boxBackgroundColor="@color/white"
		app:boxStrokeColor="@color/black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
	>

        <com.google.android.material.textfield.TextInputEditText
			android:id="@+id/confirmarPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		/>

    </com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/loginGoogle"
		style="@style/Widget.Material3.Button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="25dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="250dp"
		android:backgroundTint="@color/white"
		android:onClick="submeterNovaPassword"
		android:text="@string/submeter"
		android:textColor="@color/black"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
	/>

</androidx.constraintlayout.widget.ConstraintLayout>
